--- a/trunk/res/layout/tabmenu_customslidingtabhost.xml
+++ b/trunk/res/layout/tabmenu_customslidingtabhost.xml
@@ -34,13 +34,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
     	
-   	<com.google.ads.AdView android:id="@+id/adView"
+   	<com.google.ads.AdView 
+   	    android:id="@+id/adView"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		ads:adUnitId="a14cfbe21ab68ae"
 		ads:adSize="BANNER"
     	android:layout_alignParentBottom="true" 
 		android:background="#fff" />
+   	
 	<HorizontalScrollView
     	android:id="@+id/bottomBar"
     	android:layout_above="@id/adView"
@@ -48,18 +50,22 @@
     	android:scrollbarThumbHorizontal="@drawable/scrollbar_horizontal_thumb"
     	android:scrollbarSize="3dip"
     	android:layout_width="fill_parent"
-    	android:background="@drawable/bottom_bar" android:layout_height="wrap_content" android:scrollbarAlwaysDrawHorizontalTrack="true">
+    	android:background="@drawable/bottom_bar" 
+    	android:layout_height="wrap_content" 
+    	android:scrollbarAlwaysDrawHorizontalTrack="true">
+    	
     	<RadioGroup
-        		android:layout_width="fill_parent"
-        		android:layout_height="wrap_content"
-        		android:orientation="horizontal"
-        		android:id="@+id/bottomMenu">
-    	</RadioGroup>
+       		android:id="@+id/bottomMenu" 
+       		android:layout_width="fill_parent"
+       		android:layout_height="wrap_content"
+       		android:orientation="horizontal" />
 	</HorizontalScrollView>	
 	
-	<LinearLayout android:id="@+id/contentViewLayout" 
+	<LinearLayout 
+	    android:id="@+id/contentViewLayout" 
 		android:orientation="vertical"
 		android:layout_width="fill_parent" 
 		android:layout_height="fill_parent" 
-		android:background="#EEE" android:layout_above="@id/bottomBar" />
+		android:background="#EEE" 
+		android:layout_above="@id/bottomBar" />
 </RelativeLayout>
